refact infra readme

--- a/infrastructure/data/rabbitmq.conf
+++ b/infrastructure/data/rabbitmq.conf
@@ -1,6 +1,6 @@
 # rabbitmq.conf
-default_user = mscott
-default_pass = IoSo1F4nt4$71c0
+default_user = rabbitmqadmin
+default_pass = rabbitmqadmin
 loopback_users.guest = false
 management.listener.port = 15672
 management.load_definitions = /etc/rabbitmq/definitions.json
